UniversityCRM/force-app/main/default/objects/Opportunity/fields/Head_Count__c.field-meta.xml
<CustomField>
    <fullName>Head_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Head Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>