UniversityCRM/force-app/main/default/objects/Opportunity/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hiring Manager details</description>
    <label>Hiring Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Jobpostings</relationshipName>
    <type>Lookup</type>
</CustomField>