UniversityCRM/force-app/main/default/objects/Opportunity/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <description>Position title</description>
    <label>Position Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>